# sorter

./: Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: benchmark.yml  release.yml  rust.yml
artifacts/: random_numbers.txt
benches/: sort_benchmark.rs
src/: main.rs
tests/: integration_test.rs
